swagger-msr-springboot project
