# swagger-msr.yaml
@@ -25,6 +25,8 @@ paths:
       description: |
         return all seats registered MSR system
       operationId: findSeats
+      produces:
+        - application/json           
       parameters:
         - name: seatNo
           in: query
@@ -47,6 +49,10 @@ paths:
     post:
       description: Creates a new seat
       operationId: addSeat
+      consumes:
+        - application/json
+      produces:
+        - application/json           
       parameters:
         - name: seat
           in: body
@@ -63,6 +69,8 @@ paths:
     get:
       description: Returns a seat who has the id
       operationId: findSeatById
+      produces:
+        - application/json            
       parameters:
         - name: id
           in: path
@@ -70,21 +78,28 @@ paths:
           required: true
           type: integer
           format: int64
+          default: 1
       responses:
         200:
           description: seat response
           schema:
+            type: object
             $ref: '#/definitions/Seat'
     put:
       description: Updates a seat
       operationId: addSeat
+      consumes:
+        - application/json
+      produces:
+        - application/json            
       parameters:
         - name: id
           in: path
           description: ID of seat to fetch
           required: true
           type: integer
-          format: int64          
+          format: int64  
+          default: 1
         - name: seat
           in: body
           description: Seat to add to the store
@@ -106,6 +121,7 @@ paths:
           required: true
           type: integer
           format: int64
+          default: 1
       responses:
         204:
           description: seat deleted
@@ -113,8 +129,6 @@ paths:
     get:
       description: find seats available on a certain date
       operationId: findSeats
-      consumes:
-        - application/json
       produces:
         - application/json      
       parameters:
@@ -124,6 +138,7 @@ paths:
           required: true
           type: string
           format: date
+          default: 2017-09-10
         - name: status
           in: query
           description: available or occupied, upon this value is null, all seats will be returned
@@ -142,6 +157,10 @@ paths:
     post:
       description: reserve a seat
       operationId: reserveSeat
+      consumes:
+        - application/json
+      produces:
+        - application/json           
       parameters:
         - name: body
           in: body
@@ -158,24 +177,30 @@ paths:
     get:
       description: find reservation information by user
       operationId: findReservationsByUser
+      produces:
+        - application/json        
       parameters:
         - name: userId
           in: path
           description: user id
           required: true
-          type: string
+          type: integer
+          format: int64
+          default: 1
         - name: from
           in: query
           description: the begining date of search
           required: false
           type: string
           format: date
+          default: 2017-09-01
         - name: to
           in: query
           description: the end date of search
           required: false
           type: string
           format: date
+          default: 2017-09-30
       responses:
         200:
           description: return reservation history
@@ -187,6 +212,8 @@ paths:
     get:
       description: get detailed information of the reservation
       operationId: viewReservation
+      produces:
+        - application/json        
       parameters:
         - name: reservationId
           in: path
@@ -194,6 +221,7 @@ paths:
           required: true
           type: integer
           format: int64
+          default: 1
       responses:
         200:
           description: return the detailed information of the reservation
@@ -209,6 +237,7 @@ paths:
           required: true
           type: integer
           format: int64
+          default: 1
       responses:
         204:
           description: reservation deleted
@@ -226,6 +255,7 @@ paths:
           required: true
           type: integer
           format: int64
+          default: 1
         - name: reservation
           in: body
           description: reservation information
@@ -239,15 +269,14 @@ paths:
             $ref: '#/definitions/Reservation'
 definitions:
   Seat:
-    type: object
     allOf:
       - $ref: '#/definitions/NewSeat'
-    required:
-      - id
-    properties:
-      id:
-        type: integer
-        format: int64
+      - required:
+        - id
+        properties:
+          id:
+            type: integer
+            format: int64
   NewSeat:
     type: object
     required:
@@ -269,15 +298,14 @@ definitions:
       email:
         type: string
   Reservation:
-    type: object
     allOf: 
       - $ref: '#/definitions/NewReservation'
-    required:
-      - id
-    properties:
-      id:
-        type: integer
-        format: int64  
+      - required:
+        - id
+        properties:
+          id:
+            type: integer
+            format: int64  
   NewReservation:
     type: object
     properties:
